# dormant-neurons

./: .gitignore  README.md  cfg_check.txt  install.ipynb  makefile  pyproject.toml  requirements.txt
configs/: base.yaml
configs/algo/: dqn.yaml  ppo.yaml  sac.yaml
configs/experiment/: dqn_cartpole_baseline.yaml  dqn_cartpole_redo.yaml  ppo_cartpole_baseline.yaml  ppo_minigrid_redo.yaml  sac_halfcheetah_baseline.yaml  sac_halfcheetah_redo.yaml
configs/redo/: off.yaml  redo_ablations.yaml  redo_default.yaml
scripts/: aggregate_and_plot.sh  run_sweep.sh  smoke_test.sh
src/: __init__.py  main.py
src/analysis/: __init__.py  aggregate.py  plots.py
src/instrumentation/: __init__.py  dormancy.py  events.py  hooks.py  repr_metrics.py
src/logging/: __init__.py  logger.py  schemas.py
src/redo/: __init__.py  recycle.py  schedules.py
src/rl/: __init__.py  buffers.py  dqn.py  networks.py  ppo.py  sac.py
tests/: test_dormancy.py  test_redo_recycle.py
